-Code written for Screen navigations -headers are completed - have to fix the wordings and button methods -have to complete reports and clubs view

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-shared-utils</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
